--- a/.github/workflows/Semgrep Full Scan.yml
+++ b/.github/workflows/Semgrep Full Scan.yml
@@ -40,4 +40,4 @@ jobs:
         - name: Download report
           uses: actions/download-artifact@v3
           with: 
-            name: report.sarif
+            name: report.json
