--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./scripts  # 스크립트 디렉토리로 설정
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -21,8 +24,8 @@ jobs:
     - name: "Install dependencies"
       run: |
         .venv/bin/pip install --upgrade pip
-        .venv/bin/pip install -r ./scripts/requirements.txt
+        .venv/bin/pip install -r ./requirements.txt
         
     - name: "Build the source"
       run: |
-        sudo ./scripts/run.sh
+        sudo ./run.sh
