--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -2,6 +2,7 @@ name: Draft Release
 on:
   pull_request:
     types: [closed]
+  workflow_dispatch:
 jobs:
   draft-release:
     runs-on: ubuntu-latest
